// Copyright 2018 The Exonum Team
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "helpers.proto";

package exonum.tests;

message TimestampTx { bytes data = 1; }

message TxAfterCommit { uint64 height = 1; }

message TxConfig {
  exonum.PublicKey from = 1;
  bytes config = 2;
  uint64 actual_from = 3;
}

message TxSimple {
  exonum.PublicKey public_key = 1;
  string msg = 2;
}

message TestServiceTx { uint64 value = 1; }

message BlockchainTestTxA { uint64 a = 1; }

message BlockchainTestTxB {
  uint64 b = 1;
  uint32 c = 2;
}

message CreateWallet {
  exonum.PublicKey pubkey = 1;
  string name = 2;
}

message Transfer {
  exonum.PublicKey from = 1;
  exonum.PublicKey to = 2;
  uint64 amount = 3;
}
